# semantic-toolkit

./: .env.example  .gitignore  CONTRIBUTING.md  PROJECT_STRUCTURE.md  PR_DESCRIPTION.md  PR_DESCRIPTION_EN.md  README.md  README_API.md  api.py  api_example.py  app.py  clc_classifier.py  cli.py  conftest.py  example.py  example_keyword.py  pyproject.toml  pytest.ini  requirements.txt  run_api.bat  run_api.sh  run_tests.bat  run_tests.sh  start_api.sh  test_api.py  test_basic_functionality.py  test_clc_classifier.py  test_cli.py
.github/workflows/: ci.yml
MoveRecognitionPrompt/: .env.example  .gitignore  README.md  api_client.py  app.py  main.py  prompts.py  requirements.txt  server.py
MoveRecognitionPrompt/frontend/: en-abstract.html  zh-abstract.html  zh-project.html
MoveRecognitionPrompt/services/: __init__.py  move_recognition.py
app/: main.py
auto_classifier/: config.py  dependencies.py  main.py
auto_classifier/algorithms/: clc_classifier.py
auto_classifier/routers/: classify.py  health.py
auto_classifier/schemas/: classify.py
auto_classifier/services/: file_parse_service.py
docs/: code_standard.md  plan.docx
modelscope-style-chinese-abstract-page/: ModelscopeStyleChineseAbstractPage.tsx  README.txt  preview.html
move_recognition/en_abstract_move_recognition/: .env.example  .gitignore  README.md  app.py  requirements.txt
scripts/: run_api.bat  run_api.sh  run_tests.bat  run_tests.sh
tests/: __init__.py  conftest.py  test_api.py  test_clc_classifier.py  test_english_abstract.py  test_keyword_recognition.py  test_main.py
(+19 files in other folders)
