[project]
name = "semantic-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "zai-sdk>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
