[project]
name = "semantic-toolkit"
version = "0.1.0"
description = "A semantic computing toolkit for abstract analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zai-sdk>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_toolkit"]
